--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     margin-bottom: 20px;
 }
 .logo {
-    height: 2.5em; /* Matches the font size */
+    height: 2.5em; /* Increase the logo size to 2.5em */
     margin-right: 10px; /* Add some space between the logo and the title */
 }
 h1 {
@@ -53,6 +53,31 @@ h1 {
 .tab.active {
     background-color: #cc0000;
 }
+.subtabs {
+    display: none;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.subtabs.active {
+    display: flex;
+}
+.subtab {
+    padding: 10px 20px;
+    cursor: pointer;
+    background-color: #007bff;
+    color: white;
+    margin: 0 5px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    font-weight: bold;
+    font-size: 16px;
+}
+.subtab:hover {
+    background-color: #0056b3;
+}
+.subtab.active {
+    background-color: #0056b3;
+}
 .table-container {
     display: none;
     overflow-x: auto;
@@ -67,6 +92,11 @@ h1 {
 }
 .tab-content.active {
     display: block;
+}
+#workout-details {
+    font-size: 2em; /* Slightly larger font size */
+    text-align: center; /* Center the workout details */
+    margin-top: 20px;
 }
 table {
     width: 100%;
